added slick.js as a dependency

--- a/src/app/main/main.html
+++ b/src/app/main/main.html
@@ -1,8 +1,7 @@
-<div class="container">
+<div id="container">
   <header>
     <h1>Cocoa Beach Community Church</h1>
   </header>
-
 
   <div class="footer">
   </div>
