--- a/src/app/index.scss
+++ b/src/app/index.scss
@@ -1,8 +1,43 @@
 #container{
+  position:relative;
   header{
+    position: absolute;
+    top: 0;
+    left: 5%;
+    z-index: 10;
+    color: white;
+    background-color: gray;
+    padding: 1vw;
+    border-radius: 0 0 1vw 1vw;
+    h1 {
+      margin: 0;
+      padding: 0;
+      font-size: 2vw;
+    }
   }
 }
-
+.carousel .item {
+  width: 100%; /*slider width*/
+  max-height: 600px; /*slider height*/
+}
+.carousel .item img {
+  width: 100%; /*img width*/
+}
+/*add some makeup*/
+.carousel-control {
+  background: none;
+  border: none;
+}
+.carousel-indicators {
+  bottom: 100px;
+}
+/*full width container*/
+@media (max-width: 767px) {
+  .block {
+    margin-left: -20px;
+    margin-right: -20px;
+  }
+}
 
 
 
