--- a/src/app/main/main.html
+++ b/src/app/main/main.html
@@ -2,7 +2,16 @@
   <header>
     <h1>Cocoa Beach Community Church</h1>
   </header>
-
+  <carousel interval="myInterval">
+    <slide ng-repeat="slide in slides" active="slide.active">
+      <img ng-src="{{slide.image}}">
+      <div class="carousel-caption">
+        <!--<h4>Slide {{$index+1}}</h4>-->
+      </div>
+    </slide>
+  </carousel>
+  <div class="starthere"><p>Start Here</p></div>
+  <p>some text</p>
   <div class="footer">
   </div>
 
