--- a/src/app/main/main.html
+++ b/src/app/main/main.html
@@ -2,6 +2,14 @@
   <header>
     <h1>Cocoa Beach Community Church</h1>
   </header>
+  <nav>
+    <a href ="https://www.facebook.com/CBCC.UCC" target="_blank"><i class="fa fa-facebook-official"></i></a>
+    <a href="#">ABOUT</a>
+    <a href="#">MINISTRIES</a>
+    <a href="#">FACILITIES</a>
+    <a href="#">SERVE</a>
+    <a href="#">GIVE</a>
+  </nav>
   <div class="carouselcontainer">
   <carousel interval="myInterval">
     <slide ng-repeat="slide in slides" active="slide.active">
