--- a/src/app/main/main.html
+++ b/src/app/main/main.html
@@ -22,13 +22,147 @@
     <div class="starthere" data-ng-click="reveal.show = !reveal.show"><p>Start Here</p></div>
   </div><!--carouselcontainer-->
   <section class="contentreveal ng-hide" data-ng-show="reveal.show">
-    <p>some text</p>
-    <p>some text</p>
-    <p>some text</p>
-    <p>some text</p>
-    <p>some text</p>
-    <p>some text</p>
-    <p>some text</p>
+    <div class="row tilerow"><!--TILE ROW START-->
+      <div class="linkanddesccontainer col-md-4 col-md-offset-1">
+    <div class="linkcontainer "><!--SINGLE TILE IN ROW-->
+      <a href="#" class="linktile">
+        <div class="row">
+          <div class="iconcontainer">
+            <i class="fa fa-calendar fa-4x"></i>
+          </div>
+          <div class="linktiletext">
+            <p class="linkname">Plan</p>
+            <p class="linksubtitle">Your Visit</p>
+          </div>
+        </div>
+      </a><!--linktile-->
+    </div><!--linkcontainer-->
+      <p class="description">We can't wait to meet you and we want your experience to be amazing.</p>
+    </div><!--linkanddescontainer-->
+
+      <div class="linkanddesccontainer col-md-4 col-md-offset-2">
+        <div class="linkcontainer "><!--SINGLE TILE IN ROW-->
+          <a href="#" class="linktile">
+            <div class="row">
+              <div class="iconcontainer">
+                <i class="fa fa-home fa-4x"></i>
+              </div>
+              <div class="linktiletext">
+                <p class="linkname">Learn More</p>
+                <p class="linksubtitle">About CBCC</p>
+              </div>
+            </div>
+          </a><!--linktile-->
+        </div><!--linkcontainer-->
+        <p class="description">Click here to learn more about Cocoa Beach Community Church.</p>
+      </div><!--linkanddescontainer-->
+    </div><!--row-->
+
+    <div class="row tilerow"><!--TILE ROW START-->
+      <div class="linkanddesccontainer col-md-4 col-md-offset-1">
+        <div class="linkcontainer "><!--SINGLE TILE IN ROW-->
+          <a href="#" class="linktile">
+            <div class="row">
+              <div class="iconcontainer">
+                <i class="fa fa-globe fa-4x"></i>
+              </div>
+              <div class="linktiletext">
+                <p class="linkname">Ministries</p>
+                <p class="linksubtitle">At CBCC</p>
+              </div>
+            </div>
+          </a><!--linktile-->
+        </div><!--linkcontainer-->
+        <p class="description">Worship, Education, Mission, Pastoral Care, Women's Fellowship and much more.</p>
+      </div><!--linkanddescontainer-->
+
+      <div class="linkanddesccontainer col-md-4 col-md-offset-2">
+        <div class="linkcontainer "><!--SINGLE TILE IN ROW-->
+          <a href="#" class="linktile">
+            <div class="row">
+              <div class="iconcontainer">
+                <i class="fa fa-building fa-4x"></i>
+              </div>
+              <div class="linktiletext">
+                <p class="linkname">Facilities</p>
+                <p class="linksubtitle">Whats available</p>
+              </div>
+            </div>
+          </a><!--linktile-->
+        </div><!--linkcontainer-->
+        <p class="description">Weddings, Receptions, Retreats, Parties, Business Meetings, and more.</p>
+      </div><!--linkanddescontainer-->
+    </div><!--row-->
+    <div class="row tilerow"><!--TILE ROW START-->
+      <div class="linkanddesccontainer col-md-4 col-md-offset-1">
+        <div class="linkcontainer "><!--SINGLE TILE IN ROW-->
+          <a href="#" class="linktile">
+            <div class="row">
+              <div class="iconcontainer">
+                <i class="fa fa-star fa-4x"></i>
+              </div>
+              <div class="linktiletext">
+                <p class="linkname">Opportunities</p>
+                <p class="linksubtitle">Local and beyond</p>
+              </div>
+            </div>
+          </a><!--linktile-->
+        </div><!--linkcontainer-->
+        <p class="description">Mission Opportunities</p>
+      </div><!--linkanddescontainer-->
+
+      <div class="linkanddesccontainer col-md-4 col-md-offset-2">
+        <div class="linkcontainer "><!--SINGLE TILE IN ROW-->
+          <a href="#" class="linktile">
+            <div class="row">
+              <div class="iconcontainer">
+                <i class="fa fa-heart fa-4x"></i>
+              </div>
+              <div class="linktiletext">
+                <p class="linkname">Spiritual Enrichment</p>
+                <p class="linksubtitle">Find a life team</p>
+              </div>
+            </div>
+          </a><!--linktile-->
+        </div><!--linkcontainer-->
+        <p class="description">All about the center for spiritual enrichment</p>
+      </div><!--linkanddescontainer-->
+    </div><!--row-->
+    <div class="row tilerow"><!--TILE ROW START-->
+      <div class="linkanddesccontainer col-md-4 col-md-offset-1">
+        <div class="linkcontainer "><!--SINGLE TILE IN ROW-->
+          <a href="#" class="linktile">
+            <div class="row">
+              <div class="iconcontainer">
+                <i class="fa fa-shopping-cart fa-4x"></i>
+              </div>
+              <div class="linktiletext">
+                <p class="linkname">Thrift Shop</p>
+                <p class="linksubtitle">Open daily</p>
+              </div>
+            </div>
+          </a><!--linktile-->
+        </div><!--linkcontainer-->
+        <p class="description">Short summary about the thrift shop, perhaps the hours</p>
+      </div><!--linkanddescontainer-->
+
+      <div class="linkanddesccontainer col-md-4 col-md-offset-2">
+        <div class="linkcontainer "><!--SINGLE TILE IN ROW-->
+          <a href="#" class="linktile">
+            <div class="row">
+              <div class="iconcontainer">
+                <i class="fa fa-child fa-4x"></i>
+              </div>
+              <div class="linktiletext">
+                <p class="linkname">Give</p>
+                <p class="linksubtitle">Make a donation</p>
+              </div>
+            </div>
+          </a><!--linktile-->
+        </div><!--linkcontainer-->
+        <p class="description">Click here to help continue our work.</p>
+      </div><!--linkanddescontainer-->
+    </div><!--row-->
   </section>
 
   <footer>
