setting up all pages, routes not added yet

--- a/src/app/index.scss
+++ b/src/app/index.scss
@@ -75,6 +75,7 @@
 .carousel-control {
   background: none;
   border: none;
+  cursor: pointer;
 }
 .carousel-indicators {
   bottom: 5vw;
@@ -166,6 +167,7 @@ footer {
   border-top: 3px solid lightgray;
   background-color: darkslategray;
   color: white;
+  padding-top: 3em;
 }
 
 
