--- a/src/app/main/main.html
+++ b/src/app/main/main.html
@@ -4,11 +4,11 @@
   </header>
   <nav>
     <a href ="https://www.facebook.com/CBCC.UCC" target="_blank"><i class="fa fa-facebook-official"></i></a>
-    <a href="#">ABOUT</a>
-    <a href="#">MINISTRIES</a>
-    <a href="#">FACILITIES</a>
-    <a href="#">SERVE</a>
-    <a href="#">GIVE</a>
+    <a ui-sref="learn">ABOUT</a>
+    <a ui-sref="ministries">MINISTRIES</a>
+    <a ui-sref="facilities">FACILITIES</a>
+    <a ui-sref="opportunities">SERVE</a>
+    <a ui-sref="give">GIVE</a>
   </nav>
   <div class="carouselcontainer">
   <carousel interval="myInterval">
@@ -25,7 +25,7 @@
     <div class="row tilerow"><!--TILE ROW START-->
       <div class="linkanddesccontainer col-md-4 col-md-offset-1">
     <div class="linkcontainer "><!--SINGLE TILE IN ROW-->
-      <a href="#" class="linktile">
+      <a ui-sref="plan" class="linktile">
         <div class="row">
           <div class="iconcontainer">
             <i class="fa fa-calendar fa-4x"></i>
@@ -42,7 +42,7 @@
 
       <div class="linkanddesccontainer col-md-4 col-md-offset-2">
         <div class="linkcontainer "><!--SINGLE TILE IN ROW-->
-          <a href="#" class="linktile">
+          <a ui-sref="learn" class="linktile">
             <div class="row">
               <div class="iconcontainer">
                 <i class="fa fa-home fa-4x"></i>
@@ -61,7 +61,7 @@
     <div class="row tilerow"><!--TILE ROW START-->
       <div class="linkanddesccontainer col-md-4 col-md-offset-1">
         <div class="linkcontainer "><!--SINGLE TILE IN ROW-->
-          <a href="#" class="linktile">
+          <a ui-sref="ministries" class="linktile">
             <div class="row">
               <div class="iconcontainer">
                 <i class="fa fa-globe fa-4x"></i>
@@ -78,7 +78,7 @@
 
       <div class="linkanddesccontainer col-md-4 col-md-offset-2">
         <div class="linkcontainer "><!--SINGLE TILE IN ROW-->
-          <a href="#" class="linktile">
+          <a ui-sref="facilities" class="linktile">
             <div class="row">
               <div class="iconcontainer">
                 <i class="fa fa-building fa-4x"></i>
@@ -96,7 +96,7 @@
     <div class="row tilerow"><!--TILE ROW START-->
       <div class="linkanddesccontainer col-md-4 col-md-offset-1">
         <div class="linkcontainer "><!--SINGLE TILE IN ROW-->
-          <a href="#" class="linktile">
+          <a ui-sref="opportunities" class="linktile">
             <div class="row">
               <div class="iconcontainer">
                 <i class="fa fa-star fa-4x"></i>
@@ -113,7 +113,7 @@
 
       <div class="linkanddesccontainer col-md-4 col-md-offset-2">
         <div class="linkcontainer "><!--SINGLE TILE IN ROW-->
-          <a href="#" class="linktile">
+          <a ui-sref="spiritual" class="linktile">
             <div class="row">
               <div class="iconcontainer">
                 <i class="fa fa-heart fa-4x"></i>
@@ -131,7 +131,7 @@
     <div class="row tilerow"><!--TILE ROW START-->
       <div class="linkanddesccontainer col-md-4 col-md-offset-1">
         <div class="linkcontainer "><!--SINGLE TILE IN ROW-->
-          <a href="#" class="linktile">
+          <a ui-sref="thriftshop" class="linktile">
             <div class="row">
               <div class="iconcontainer">
                 <i class="fa fa-shopping-cart fa-4x"></i>
@@ -148,7 +148,7 @@
 
       <div class="linkanddesccontainer col-md-4 col-md-offset-2">
         <div class="linkcontainer "><!--SINGLE TILE IN ROW-->
-          <a href="#" class="linktile">
+          <a ui-sref="give" class="linktile">
             <div class="row">
               <div class="iconcontainer">
                 <i class="fa fa-child fa-4x"></i>
