--- a/src/app/plan/plan.html
+++ b/src/app/plan/plan.html
@@ -1,174 +1,3 @@
 <div id="container">
-  <header>
-    <h1>Cocoa Beach Community Church</h1>
-  </header>
-  <nav>
-    <a href ="https://www.facebook.com/CBCC.UCC" target="_blank"><i class="fa fa-facebook-official"></i></a>
-    <a href="#">ABOUT</a>
-    <a href="#">MINISTRIES</a>
-    <a href="#">FACILITIES</a>
-    <a href="#">SERVE</a>
-    <a href="#">GIVE</a>
-  </nav>
-  <div class="carouselcontainer">
-  <carousel interval="myInterval">
-    <slide ng-repeat="slide in slides" active="slide.active">
-      <img ng-src="{{slide.image}}">
-      <div class="carousel-caption">
-        <!--<h4>Slide {{$index+1}}</h4>-->
-      </div>
-    </slide>
-  </carousel>
-    <div class="starthere" data-ng-click="reveal.show = !reveal.show"><p>Start Here</p></div>
-  </div><!--carouselcontainer-->
-  <section class="contentreveal ng-hide" data-ng-show="reveal.show">
-    <div class="row tilerow"><!--TILE ROW START-->
-      <div class="linkanddesccontainer col-md-4 col-md-offset-1">
-    <div class="linkcontainer "><!--SINGLE TILE IN ROW-->
-      <a href="#" class="linktile">
-        <div class="row">
-          <div class="iconcontainer">
-            <i class="fa fa-calendar fa-4x"></i>
-          </div>
-          <div class="linktiletext">
-            <p class="linkname">Plan</p>
-            <p class="linksubtitle">Your Visit</p>
-          </div>
-        </div>
-      </a><!--linktile-->
-    </div><!--linkcontainer-->
-      <p class="description">We can't wait to meet you and we want your experience to be amazing.</p>
-    </div><!--linkanddescontainer-->
-
-      <div class="linkanddesccontainer col-md-4 col-md-offset-2">
-        <div class="linkcontainer "><!--SINGLE TILE IN ROW-->
-          <a href="#" class="linktile">
-            <div class="row">
-              <div class="iconcontainer">
-                <i class="fa fa-home fa-4x"></i>
-              </div>
-              <div class="linktiletext">
-                <p class="linkname">Learn More</p>
-                <p class="linksubtitle">About CBCC</p>
-              </div>
-            </div>
-          </a><!--linktile-->
-        </div><!--linkcontainer-->
-        <p class="description">Click here to learn more about Cocoa Beach Community Church.</p>
-      </div><!--linkanddescontainer-->
-    </div><!--row-->
-
-    <div class="row tilerow"><!--TILE ROW START-->
-      <div class="linkanddesccontainer col-md-4 col-md-offset-1">
-        <div class="linkcontainer "><!--SINGLE TILE IN ROW-->
-          <a href="#" class="linktile">
-            <div class="row">
-              <div class="iconcontainer">
-                <i class="fa fa-globe fa-4x"></i>
-              </div>
-              <div class="linktiletext">
-                <p class="linkname">Ministries</p>
-                <p class="linksubtitle">At CBCC</p>
-              </div>
-            </div>
-          </a><!--linktile-->
-        </div><!--linkcontainer-->
-        <p class="description">Worship, Education, Mission, Pastoral Care, Women's Fellowship and much more.</p>
-      </div><!--linkanddescontainer-->
-
-      <div class="linkanddesccontainer col-md-4 col-md-offset-2">
-        <div class="linkcontainer "><!--SINGLE TILE IN ROW-->
-          <a href="#" class="linktile">
-            <div class="row">
-              <div class="iconcontainer">
-                <i class="fa fa-building fa-4x"></i>
-              </div>
-              <div class="linktiletext">
-                <p class="linkname">Facilities</p>
-                <p class="linksubtitle">Whats available</p>
-              </div>
-            </div>
-          </a><!--linktile-->
-        </div><!--linkcontainer-->
-        <p class="description">Weddings, Receptions, Retreats, Parties, Business Meetings, and more.</p>
-      </div><!--linkanddescontainer-->
-    </div><!--row-->
-    <div class="row tilerow"><!--TILE ROW START-->
-      <div class="linkanddesccontainer col-md-4 col-md-offset-1">
-        <div class="linkcontainer "><!--SINGLE TILE IN ROW-->
-          <a href="#" class="linktile">
-            <div class="row">
-              <div class="iconcontainer">
-                <i class="fa fa-star fa-4x"></i>
-              </div>
-              <div class="linktiletext">
-                <p class="linkname">Opportunities</p>
-                <p class="linksubtitle">Local and beyond</p>
-              </div>
-            </div>
-          </a><!--linktile-->
-        </div><!--linkcontainer-->
-        <p class="description">Mission Opportunities</p>
-      </div><!--linkanddescontainer-->
-
-      <div class="linkanddesccontainer col-md-4 col-md-offset-2">
-        <div class="linkcontainer "><!--SINGLE TILE IN ROW-->
-          <a href="#" class="linktile">
-            <div class="row">
-              <div class="iconcontainer">
-                <i class="fa fa-heart fa-4x"></i>
-              </div>
-              <div class="linktiletext">
-                <p class="linkname">Spiritual Enrichment</p>
-                <p class="linksubtitle">Find a life team</p>
-              </div>
-            </div>
-          </a><!--linktile-->
-        </div><!--linkcontainer-->
-        <p class="description">All about the center for spiritual enrichment</p>
-      </div><!--linkanddescontainer-->
-    </div><!--row-->
-    <div class="row tilerow"><!--TILE ROW START-->
-      <div class="linkanddesccontainer col-md-4 col-md-offset-1">
-        <div class="linkcontainer "><!--SINGLE TILE IN ROW-->
-          <a href="#" class="linktile">
-            <div class="row">
-              <div class="iconcontainer">
-                <i class="fa fa-shopping-cart fa-4x"></i>
-              </div>
-              <div class="linktiletext">
-                <p class="linkname">Thrift Shop</p>
-                <p class="linksubtitle">Open daily</p>
-              </div>
-            </div>
-          </a><!--linktile-->
-        </div><!--linkcontainer-->
-        <p class="description">Short summary about the thrift shop, perhaps the hours</p>
-      </div><!--linkanddescontainer-->
-
-      <div class="linkanddesccontainer col-md-4 col-md-offset-2">
-        <div class="linkcontainer "><!--SINGLE TILE IN ROW-->
-          <a href="#" class="linktile">
-            <div class="row">
-              <div class="iconcontainer">
-                <i class="fa fa-child fa-4x"></i>
-              </div>
-              <div class="linktiletext">
-                <p class="linkname">Give</p>
-                <p class="linksubtitle">Make a donation</p>
-              </div>
-            </div>
-          </a><!--linktile-->
-        </div><!--linkcontainer-->
-        <p class="description">Click here to help continue our work.</p>
-      </div><!--linkanddescontainer-->
-    </div><!--row-->
-  </section>
-
-  <footer>
-    <p>some footer content</p>
-    <p>some footer content</p>
-    <p>some footer content</p>
-  </footer>
-
+<h1>Plan</h1>
 </div>
