started standard page template

--- a/src/app/learn/learn.html
+++ b/src/app/learn/learn.html
@@ -1,3 +1,16 @@
-<div id="container">
-<h1>Learn</h1>
+<div id="container" class='otherpages'>
+  <header>
+    <h1>Cocoa Beach Community Church</h1>
+  </header>
+  <nav>
+    <a href ="https://www.facebook.com/CBCC.UCC" target="_blank"><i class="fa fa-facebook-official"></i></a>
+    <a ui-sref="learn">ABOUT</a>
+    <a ui-sref="ministries">MINISTRIES</a>
+    <a ui-sref="facilities">WEDDINGS</a>
+    <a ui-sref="opportunities">SERVE</a>
+    <a ui-sref="give">GIVE</a>
+  </nav>
+  <section class='content'>
+	
+  </section>
 </div>
