--- a/src/app/main/main.html
+++ b/src/app/main/main.html
@@ -6,7 +6,7 @@
     <a href ="https://www.facebook.com/CBCC.UCC" target="_blank"><i class="fa fa-facebook-official"></i></a>
     <a ui-sref="learn">ABOUT</a>
     <a ui-sref="ministries">MINISTRIES</a>
-    <a ui-sref="facilities">FACILITIES</a>
+    <a ui-sref="facilities">WEDDINGS</a>
     <a ui-sref="opportunities">SERVE</a>
     <a ui-sref="give">GIVE</a>
   </nav>
