--- a/src/app/index.scss
+++ b/src/app/index.scss
@@ -1,3 +1,7 @@
+body {
+	background-color: #F7F7F0;
+}
+
 #container{
   position:relative;
   header{
@@ -169,7 +173,8 @@ footer {
   color: white;
   padding-top: 3em;
 }
-
+.otherpages {
+}
 
 
 
