--- a/src/app/learn/learn.html
+++ b/src/app/learn/learn.html
@@ -10,7 +10,52 @@
     <a ui-sref="opportunities">SERVE</a>
     <a ui-sref="give">GIVE</a>
   </nav>
-  <section class='content'>
-	
+  <section class='pagescontent'>
+		<div class='topimage'>
+		</div>
+		<div class='row'>
+			<section class='lefttext col-md-6 col-md-offset-1'>
+				<h2>WHO WE ARE</h2>
+				<h4>Our faith is 2,000 years old. Our thinking is not.</h4>
+				<p>We believe in God's continuing testament.  This is why we are committed to hearing God's ancient story anew and afresh in our lives and in the world today.  We try to remain attentive to God's creative movement in the world. Religion and science are not mutually exclusive, and your head and heart are both welcomed into our places of worship.  We prepare our members and leaders to be engaged in ministry in the present and future church, and we embrace all kinds of communities and new modes of thinking.  Why? Because God is still speaking,</p>
+				<h4>No matter who you are or where you are on life's journey, you are welcome here.</h4>
+				<p>We believe in extravagant welcome.  This is why we insist that God's communion table is open, not closed, and God's gift and claim in baptism are irrevocable.  We advocate justice for all.  Our congregations extend hospitality as a sign of God's inclusive love.  We teach that evangelism — offering bread to those in search of it — is God's mission.  Our perspective is global, not provincial.  We work with — not against — people of other faiths.  Why? Because God is still speaking,
+				</p>
+				<h4>Never place a period where God has placed a comma.</h4>
+				<p>
+We believe the church's mission is to change lives — individually, systemically and globally.  We work to make transformation possible, but trust in God's grace.  This is why we insist that churches must be places of vitality in worship, learning and advocacy. We are committed to working for justice, and we believe that lives are changed through global experiences and friendships.  Why? Because God is still speaking,
+</p>
+<h4>WHAT WE BELIEVE</h4>
+<p>We believe in the triune God: Creator, resurrected Christ, the sole Head of the church, and the Holy Spirit, who guides and brings about the creative and redemptive work of God in the world.</p>
+<p>We believe that each person is unique and valuable. It is the will of God that every person belong to a family of faith where they have a strong sense of being valued and loved.
+</p>
+<p>We believe that each person is on a spiritual journey and that each of us is at a different stage of that journey.</p>
+<p>We believe that the persistent search for God produces an authentic relationship with God, engendering love, strengthening faith, dissolving guilt, and giving life purpose and direction.</p>
+<p>We believe that all of the baptized 'belong body and soul to our Lord and Savior Jesus Christ.' No matter who – no matter what – no matter where we are on life's journey – notwithstanding race, gender identity or expression, sexual orientation, class or creed – we all belong to God and to one worldwide community of faith. All persons baptized – past, present and future – are connected to each other and to God through the sacrament of baptism. We baptize during worship when the community is present because baptism includes the community's promise of 'love, support and care' for the baptized – and we promise that we won't take it back – no matter where your journey leads you.
+</p>
+<p>We believe that all people of faith are invited to join Christ at Christ's table for the sacrament of Communion. Just as many grains of wheat are gathered to make one loaf of bread and many grapes are gathered to make one cup of wine, we, the many people of God, are made one in the body of Christ, the church. The breaking of bread and the pouring of wine reminds us of the costliness of Christ's sacrifice and the discipleship to which we are all called. In the breaking of bread, we remember and celebrate Christ's presence among us along with a 'cloud of witnesses' – our ancestors, family and friends who have gone before us. It is a great mystery; we claim it by faith.
+</p>
+<p>We believe the UCC is called to be a united and uniting church. "That they may all be one." (John 17:21) "In essentials–unity, in nonessentials–diversity, in all things–charity," These UCC mottos survive because they touch core values deep within us. The UCC has no rigid formulation of doctrine or attachment to creeds or structures. Its overarching creed is love. UCC pastors and teachers are known for their commitment to excellence in theological preparation, interpretation of the scripture and justice advocacy. Even so, love and unity in the midst of our diversity are our greatest assets.
+</p>
+<p>We believe that God calls us to be servants in the service of others and to be good stewards of the earth's resources. 'To believe is to care; to care is to do.'
+</p>
+<p>We believe that the UCC is called to be a prophetic church. As in the tradition of the prophets and apostles, God calls the church to speak truth to power, liberate the oppressed, care for the poor and comfort the afflicted.
+</p>
+<p>We believe in the power of peace, and work for nonviolent solutions to local, national, and international problems.</p>
+<p>We are a people of possibility. In the UCC, members, congregations and structures have the breathing room to explore and to hear ... for after all, God is still speaking, 
+</p>
+<a href='http://www.ucc.org/about-us_ucc-firsts'>UCC Firsts</a><br />
+<a href='http://www.ucc.org/'>UCC National Website</a><br />
+<a href='http://www.ucc.org/god-is-still-speaking/'>God is still speaking</a>
+			</section><!--lefttext-->
+			<section class='rightlinks col-md-2 col-md-offset-1'>
+					<h3>ABOUT</h3>
+					<p>Placeholder</p>
+					<p>Placeholder</p>
+					<p>Placeholder</p>
+					<p>Placeholder</p>
+					<p>Placeholder</p>
+			</section><!--rightlinks-->
+		</div>
   </section>
 </div>
