--- a/src/app/ministries/ministries.html
+++ b/src/app/ministries/ministries.html
@@ -1,3 +1,78 @@
-<div id="container">
-<h1>ministries</h1>
+<div id="container" class='otherpages'>
+  <header>
+    <h1>Cocoa Beach Community Church</h1>
+  </header>
+  <nav>
+    <a href ="https://www.facebook.com/CBCC.UCC" target="_blank"><i class="fa fa-facebook-official"></i></a>
+    <a ui-sref="learn">ABOUT</a>
+    <a ui-sref="ministries">MINISTRIES</a>
+    <a ui-sref="facilities">WEDDINGS</a>
+    <a ui-sref="opportunities">SERVE</a>
+    <a ui-sref="give">GIVE</a>
+  </nav>
+  <section class='pagescontent'>
+		<div class='topimage'>
+		</div>
+		<div class='row'>
+			<section class='lefttext col-md-6 col-md-offset-1'>
+				<h2>MINISTRIES</h2>
+				<h4>Worship</h4>
+				<p>Sundays @ 10:00 AM.</p>
+				<p>Minister: Rev. Dr. Bill Tyson</p>
+				<h4>((discussing content/bio/etc here))</h4>
+				<p>All ages gather for worship at 10:00 AM in the church sanctuary. Our worship is primarily traditional worship with our church choir offering an inspiring anthem almost every week. We have a talented rotation of soloists and ensemble teams that encompass other musical genres creating a diverse musical experience on Sundays.
+				</p>
+				<h4>((maybe a choir heading/section?))</h4>
+				<p>Choir Director: Mrs. Janet Johns</p>
+				<p>Church Organist: Mr. David Wrable</p>
+				<p>Choir Rehearsal:</p>
+				<p>Wednesdays evenings at 7:00 PM and Sunday Mornings at 9:30AM</p>
+				<h4>Adult Bible Discussions: 9:00 AM</h4>
+				<h4>Sunday Children and Youth : 10:00AM</h4>
+				<p>The Sunday morning program is for K to 6th; 7th to 12th are welcome to participate in the Hands On leadership team or remain in worship. 
+				</p>
+				<p>During our worship service, a slide indicates that children and youth can depart for morning program that includes Bible Stories, Music, Elements of Worship, Crafts, Games and Refreshments.  After worship, parents can meet with their children in Sponsler Hall.</p>
+				<p>Parents with infants and small children:</p>
+				<p>We are unable to offer childcare or educational class for children less than four years of age.  We do invite families to remain in worship and use our break room if needed, which is located near the front doors. You are still able to see and hear the worship service!</p>
+				<h4>After Worship is Fellowship</h4>
+				<p>Meet and Greet Friends Old and New!</p>
+				<p>Every week after worship plan to visit our fellowship time and get to know the friendly folk at CBCC.
+				</p>
+				<p>Potluck Lunch! The first Sunday of every month we enjoy a terrific potluck lunch. Don’t worry if you didn’t bring a dish to share because there is always plenty to go around!
+				</p>
+				<p>Fellowship is more than coffee!
+				</p>
+				<p>It is an important part of the gathered church life!
+				</p>
+				<h4>SUNDAY SERVANTS</h4>
+				<p>Each week it takes many hands to insure that our worship is the best it can be. We welcome those who wish to serve on Sundays! 
+				</p>
+				<p>Sunday School Leadership Team: 
+				</p>
+				<p>Ushers and Greeters: 
+				</p>
+				<p>Be an usher or a greeter. This is an important and vital service to our worshipping community. A greeter’s warm smile and a friendly “good morning” at the door makes anyone feel better. Our ushers make sure everyone finds a comfortable seat and has a worship bulletin. Ushers participate in the worship service too; lighting altar candles, collecting the offering and serving communion. 
+				</p>
+				<p>Audio/Visual:</p>
+				<p>Audio: Be a soundboard technician! Learn how to operate our soundboard, set up microphones and help our musical teams sound their very best.
+				</p>
+				<p>
+				Video: Be a Clicker! Weekly PowerPoint presentations need someone to “click” through the slides that project our hymns, liturgy and scripture. 
+				</p>
+				<p>Fellowship Hosts
+				</p>
+				<p>Consider hosting fellowship one Sunday! Hosts don’t need to buy the food (they can) but our Sunday snacks are purchased in advance and already at the church. Fellowship hosts need to come in earlier on Sunday and set up. Hosts often leave worship a little early to be prepared for those ready for a good cup of coffee and a snack after worship and then tidy up thereafter. A great ministry for couples or two friends who love to entertain. 
+				</p>
+
+			</section><!--lefttext-->
+			<section class='rightlinks col-md-2 col-md-offset-1'>
+					<h3>MINISTRIES</h3>
+					<p>Placeholder</p>
+					<p>Placeholder</p>
+					<p>Placeholder</p>
+					<p>Placeholder</p>
+					<p>Placeholder</p>
+			</section><!--rightlinks-->
+		</div>
+  </section>
 </div>
