--- a/src/app/opportunities/opportunities.html
+++ b/src/app/opportunities/opportunities.html
@@ -1,3 +1,37 @@
-<div id="container">
-<h1>Opportunities</h1>
+<div id="container" class='otherpages'>
+  <header>
+    <h1>Cocoa Beach Community Church</h1>
+  </header>
+  <nav>
+    <a href ="https://www.facebook.com/CBCC.UCC" target="_blank"><i class="fa fa-facebook-official"></i></a>
+    <a ui-sref="learn">ABOUT</a>
+    <a ui-sref="ministries">MINISTRIES</a>
+    <a ui-sref="facilities">WEDDINGS</a>
+    <a ui-sref="opportunities">SERVE</a>
+    <a ui-sref="give">GIVE</a>
+  </nav>
+  <section class='pagescontent'>
+		<div class='topimage'>
+		</div>
+		<div class='row'>
+			<section class='lefttext col-md-6 col-md-offset-1'>
+				<h2>Opportunities</h2>
+				<h4>Local:</h4>
+				<h4>Beyond:</h4>
+				<p>UCC Mission opportunities:</p>
+				<a href='http://www.uccfla.org/uccfla/Disaster_Ministry.html'>Disaster Ministry Opportunities</a><br />
+				<a href='http://www.ucc.org/disaster'>Disaster</a><br />
+				<a href='http://www.ucc.org/justice'>Advocate for Justice and Peace</a><br />
+				<a href='http://www.globalministries.org/'>UCC Global Ministries</a><br />
+			</section><!--lefttext-->
+			<section class='rightlinks col-md-2 col-md-offset-1'>
+					<h3>Opportunities</h3>
+					<p>Placeholder</p>
+					<p>Placeholder</p>
+					<p>Placeholder</p>
+					<p>Placeholder</p>
+					<p>Placeholder</p>
+			</section><!--rightlinks-->
+		</div>
+  </section>
 </div>
