--- a/src/app/spiritual/spiritual.html
+++ b/src/app/spiritual/spiritual.html
@@ -1,3 +1,41 @@
-<div id="container">
-<h1>Spiritual</h1>
+<div id="container" class='otherpages'>
+  <header>
+    <h1>Cocoa Beach Community Church</h1>
+  </header>
+  <nav>
+    <a href ="https://www.facebook.com/CBCC.UCC" target="_blank"><i class="fa fa-facebook-official"></i></a>
+    <a ui-sref="learn">ABOUT</a>
+    <a ui-sref="ministries">MINISTRIES</a>
+    <a ui-sref="facilities">WEDDINGS</a>
+    <a ui-sref="opportunities">SERVE</a>
+    <a ui-sref="give">GIVE</a>
+  </nav>
+  <section class='pagescontent'>
+		<div class='topimage'>
+		</div>
+		<div class='row'>
+			<section class='lefttext col-md-6 col-md-offset-1'>
+				<h2>Spiritual Life</h2>
+				<h4>Spritual Life Teams</h4>
+				<p>For 23 years, The Spiritual Health Center has studied the spiritual lives of over 4,000 people in mainstream, Protestant, Catholic, Reform Jewish, and Muslim congregations.
+				</p>
+				<h4>What we discovered,</h4>
+				<p>was simple and profound: People have experiences of the presence or action of God which are life-transforming, meaning God becomes real to them. But people rarely, if ever, share these experiences for fear of being perceived as weird, crazy, or too religious.
+				</p>
+				<h4>Our passion and our mission is to ignite that spiritual energy and light up the world with God's presence.</h4>
+</p>
+<p>We offer FIVE PROGRAMS which have proven incredibly effective in developing the spiritual lives of people in all circumstances, faith traditions and cultures. These programs can transform your life: God can become real for you. And the spiritual connections you form will make God real in the world. 
+</p>
+<a href='http://www.spiritualhealthcenter.org/' target='_blank'>From Dr. Bobbie McKay</a>
+			</section><!--lefttext-->
+			<section class='rightlinks col-md-2 col-md-offset-1'>
+					<h3>Spiritual Life</h3>
+					<p>Placeholder</p>
+					<p>Placeholder</p>
+					<p>Placeholder</p>
+					<p>Placeholder</p>
+					<p>Placeholder</p>
+			</section><!--rightlinks-->
+		</div>
+  </section>
 </div>
