--- a/src/app/thriftshop/thriftshop.html
+++ b/src/app/thriftshop/thriftshop.html
@@ -1,3 +1,35 @@
-<div id="container">
-<h1>Thrift Shop</h1>
+<div id="container" class='otherpages'>
+  <header>
+    <h1>Cocoa Beach Community Church</h1>
+  </header>
+  <nav>
+    <a href ="https://www.facebook.com/CBCC.UCC" target="_blank"><i class="fa fa-facebook-official"></i></a>
+    <a ui-sref="learn">ABOUT</a>
+    <a ui-sref="ministries">MINISTRIES</a>
+    <a ui-sref="facilities">WEDDINGS</a>
+    <a ui-sref="opportunities">SERVE</a>
+    <a ui-sref="give">GIVE</a>
+  </nav>
+  <section class='pagescontent'>
+		<div class='topimage'>
+		</div>
+		<div class='row'>
+			<section class='lefttext col-md-6 col-md-offset-1'>
+				<h2>Thrift Shop</h2>
+				<h4>Open:</h4>
+				<p>Monday and Thursdays 9:30am - 3:00pm</p>
+				<p>Friday and Saturday 10:00am - 1:00pm</p>
+				<p>Serving the people of the Space Coast w/ outstanding quality merchandise at a fraction of retail. We also have a great selection of Books, Tapes, CDs & DVDs
+				</p>
+			</section><!--lefttext-->
+			<section class='rightlinks col-md-2 col-md-offset-1'>
+					<h3>Thrift Shop</h3>
+					<p>Placeholder</p>
+					<p>Placeholder</p>
+					<p>Placeholder</p>
+					<p>Placeholder</p>
+					<p>Placeholder</p>
+			</section><!--rightlinks-->
+		</div>
+  </section>
 </div>
