--- a/src/app/main/main.html
+++ b/src/app/main/main.html
@@ -119,7 +119,7 @@
                 <i class="fa fa-heart fa-4x"></i>
               </div>
               <div class="linktiletext">
-                <p class="linkname">Spiritual Enrichment</p>
+                <p class="linkname">Spiritual Life</p>
                 <p class="linksubtitle">Find a life team</p>
               </div>
             </div>
