--- a/src/app/plan/plan.html
+++ b/src/app/plan/plan.html
@@ -1,3 +1,35 @@
-<div id="container">
-<h1>Plan</h1>
+<div id="container" class='otherpages'>
+  <header>
+    <h1>Cocoa Beach Community Church</h1>
+  </header>
+  <nav>
+    <a href ="https://www.facebook.com/CBCC.UCC" target="_blank"><i class="fa fa-facebook-official"></i></a>
+    <a ui-sref="learn">ABOUT</a>
+    <a ui-sref="ministries">MINISTRIES</a>
+    <a ui-sref="facilities">WEDDINGS</a>
+    <a ui-sref="opportunities">SERVE</a>
+    <a ui-sref="give">GIVE</a>
+  </nav>
+  <section class='pagescontent'>
+		<div class='topimage'>
+		</div>
+		<div class='row'>
+			<section class='lefttext col-md-6 col-md-offset-1'>
+					<h2>PLAN</h2>
+					<p>CBCC is located in the heart of downtown Cocoa Beach. Just one block south of Minuteman Causeway on the corner of S. 1st Street. You can park in the lot directly behind church or in lots on the north and south of the church on Atlantic Ave.  
+					</p>
+					<p>What to expect on Sunday Mornings:</p>
+					<h4>((discussing pictures/content for here))</h4>
+
+			</section><!--lefttext-->
+			<section class='rightlinks col-md-2 col-md-offset-1'>
+					<h3>PLAN</h3>
+					<p>Placeholder</p>
+					<p>Placeholder</p>
+					<p>Placeholder</p>
+					<p>Placeholder</p>
+					<p>Placeholder</p>
+			</section><!--rightlinks-->
+		</div>
+  </section>
 </div>
