added a few pages, changed header, working on footer

--- a/src/app/events/events.html
+++ b/src/app/events/events.html
@@ -15,10 +15,10 @@
 		</div>
 		<div class='row'>
 			<section class='lefttext col-md-6 col-md-offset-1'>
-				<h2>Opportunities</h2>
+				<h2>Events</h2>
 				<h4>Local:</h4>
 				<h4>Beyond:</h4>
-				<p>UCC Mission opportunities:</p>
+				<p>Events</p>
 				<a href='http://www.uccfla.org/uccfla/Disaster_Ministry.html'>Disaster Ministry Opportunities</a><br />
 				<a href='http://www.ucc.org/disaster'>Disaster</a><br />
 				<a href='http://www.ucc.org/justice'>Advocate for Justice and Peace</a><br />
