--- a/src/app/main/main.html
+++ b/src/app/main/main.html
@@ -1,15 +1,16 @@
 <div id="container">
   <header>
-    <h1>Cocoa Beach Community Church</h1>
+  <a ui-sref='home'><h1>Cocoa Beach Community Church</h1></a>
   </header>
   <nav>
     <a href ="https://www.facebook.com/CBCC.UCC" target="_blank"><i class="fa fa-facebook-official"></i></a>
     <a ui-sref="learn">ABOUT</a>
     <a ui-sref="ministries">MINISTRIES</a>
     <a ui-sref="facilities">WEDDINGS</a>
-    <a ui-sref="opportunities">SERVE</a>
+    <a ui-sref="events">EVENTS</a>
     <a ui-sref="give">GIVE</a>
-  </nav>
+	<p class='wtimes'>WORSHIP TIMES: SUNDAYS AT 9:00AM &amp; 10:00AM</p>
+	</nav>
   <div class="carouselcontainer">
   <carousel interval="myInterval">
     <slide ng-repeat="slide in slides" active="slide.active">
@@ -96,19 +97,19 @@
     <div class="row tilerow"><!--TILE ROW START-->
       <div class="linkanddesccontainer col-md-4 col-md-offset-1">
         <div class="linkcontainer "><!--SINGLE TILE IN ROW-->
-          <a ui-sref="opportunities" class="linktile">
+          <a ui-sref="events" class="linktile">
             <div class="row">
               <div class="iconcontainer">
                 <i class="fa fa-star fa-4x"></i>
               </div>
               <div class="linktiletext">
-                <p class="linkname">Opportunities</p>
-                <p class="linksubtitle">Local and beyond</p>
+                <p class="linkname">Events</p>
+                <p class="linksubtitle">Whats happening now?</p>
               </div>
             </div>
           </a><!--linktile-->
         </div><!--linkcontainer-->
-        <p class="description">Mission Opportunities</p>
+        <p class="description">Explore all of the current events.</p>
       </div><!--linkanddescontainer-->
 
       <div class="linkanddesccontainer col-md-4 col-md-offset-2">
@@ -148,6 +149,41 @@
 
       <div class="linkanddesccontainer col-md-4 col-md-offset-2">
         <div class="linkcontainer "><!--SINGLE TILE IN ROW-->
+          <a ui-sref="wfellowship" class="linktile">
+            <div class="row">
+              <div class="iconcontainer">
+                <i class="fa fa-child fa-4x"></i>
+              </div>
+              <div class="linktiletext">
+					  <p class="linkname">Womens Fellowship</p>
+                <p class="linksubtitle">some subtitle</p>
+              </div>
+            </div>
+          </a><!--linktile-->
+        </div><!--linkcontainer-->
+        <p class="description">A short summary of some type here</p>
+      </div><!--linkanddescontainer-->
+    </div><!--row-->
+    <div class="row tilerow"><!--TILE ROW START-->
+      <div class="linkanddesccontainer col-md-4 col-md-offset-1">
+        <div class="linkcontainer "><!--SINGLE TILE IN ROW-->
+          <a ui-sref="photos" class="linktile">
+            <div class="row">
+              <div class="iconcontainer">
+                <i class="fa fa-shopping-cart fa-4x"></i>
+              </div>
+              <div class="linktiletext">
+                <p class="linkname">Photo Gallery</p>
+                <p class="linksubtitle">Collection of images</p>
+              </div>
+            </div>
+          </a><!--linktile-->
+        </div><!--linkcontainer-->
+        <p class="description">Check out how fun we are!</p>
+      </div><!--linkanddescontainer-->
+
+      <div class="linkanddesccontainer col-md-4 col-md-offset-2">
+        <div class="linkcontainer "><!--SINGLE TILE IN ROW-->
           <a ui-sref="give" class="linktile">
             <div class="row">
               <div class="iconcontainer">
@@ -164,11 +200,19 @@
       </div><!--linkanddescontainer-->
     </div><!--row-->
   </section>
-
   <footer>
-    <p>some footer content</p>
-    <p>some footer content</p>
-    <p>some footer content</p>
+  <p>This Sanctuary is a Safe Place for all People to Worship, Regardless of Race, Creed, Gender, Cultural
+  Background or Sexual Orientation.</p>
+  <div class='row linksandlogo'>
+		<div class='col-md-offset-1 col-sm-offset-1 col-xs-offset-1 col-md-1 col-sm-2 col-xs-3'>
+				<a href='http://www.ucc.org/' target='_blank'>
+				<img class='img-responsive' src='assets/images/ucclogo.gif' alt='UCC logo'>
+				</a>
+		</div>
+		<div class='col-md-3'>
+				<a ui-sref='home'>home</a>
+		</div>
+	</div><!--row-->
   </footer>
 
 </div>
