--- a/src/app/main/main.html
+++ b/src/app/main/main.html
@@ -9,7 +9,7 @@
     <a ui-sref="facilities">WEDDINGS</a>
     <a ui-sref="events">EVENTS</a>
     <a ui-sref="give">GIVE</a>
-	<p class='wtimes'>WORSHIP TIMES: SUNDAYS AT 9:00AM &amp; 10:00AM</p>
+	<p class='wtimes'>WORSHIP: SUNDAYS AT 10:00AM FELLOWSHIP: 11:00AM</p>
 	</nav>
   <div class="carouselcontainer">
   <carousel interval="myInterval">
@@ -204,14 +204,32 @@
   <p>This Sanctuary is a Safe Place for all People to Worship, Regardless of Race, Creed, Gender, Cultural
   Background or Sexual Orientation.</p>
   <div class='row linksandlogo'>
-		<div class='col-md-offset-1 col-sm-offset-1 col-xs-offset-1 col-md-1 col-sm-2 col-xs-3'>
-				<a href='http://www.ucc.org/' target='_blank'>
-				<img class='img-responsive' src='assets/images/ucclogo.gif' alt='UCC logo'>
+		<div class='col-md-offset-3 col-sm-offset-1 col-xs-offset-1 col-md-1 col-sm-2 col-xs-3'>
+				<a href='http://www.ucc.org/' target='_blank' alt='UCC home page'>
+					<img class='img-responsive' src='assets/images/ucclogo.gif' alt='UCC logo'>
 				</a>
 		</div>
-		<div class='col-md-3'>
-				<a ui-sref='home'>home</a>
+		<div class='footlinkcontainer col-md-7 col-md-offset-1'>
+				<div class='col-md-12 col-xs-8 locinfo'>
+						<span>
+						Cocoa Beach Community Church, 126 South Atlantic Avenue, Cocoa Beach, FL  32931 
+						</span>
+						<span>
+						(321) 783-3961
+						</span>
+				</div>
+		<div class='col-md-12 col-xs-6 firstrowlinks footlinks'>
+				<a class='col-md-2 col-sm-3 col-xs-12' ui-sref='home'>Home</a>
+				<a class='col-md-2 col-sm-3 col-xs-12' ui-sref='learn'>Learn More</a>
+				<a class='col-md-2 col-sm-3 col-xs-12' ui-sref='ministries'>Ministries</a>
+				<a class='col-md-2 col-sm-3 col-xs-12' ui-sref='facilities'>Facilities</a>
 		</div>
+		<div class='col-md-12 col-xs-6 firstrowlinks footlinks'>
+				<a class='col-md-2 col-sm-3 col-xs-12' ui-sref='give'>Give</a>
+				<a class='col-md-2 col-sm-3 col-xs-12' ui-sref='events'>Events</a>
+				<a class='col-md-3 col-sm-4 col-xs-12' ui-sref='plan'>Plan Your Visit</a>
+		</div>
+		</div><!--footlinkcontainer-->
 	</div><!--row-->
   </footer>
 
