--- a/src/app/index.scss
+++ b/src/app/index.scss
@@ -81,7 +81,7 @@ body {
 		left: 0;
 		right:0;
 		color: white;
-		text-shadow: 2px 0px darkslategray;
+		text-shadow: 2px 0px #4A4A4A;
 	}
   }
 }
@@ -186,14 +186,14 @@ body {
 
 footer {
 	overflow: hidden;
-  border-top: 3px solid lightgray;
-  border-bottom: 6px solid #FFA600;
-  background-color: darkslategray;
-  color: white;
-  padding-top: 5em;
-  padding-bottom:2em;
+  	border-top: 3px solid lightgray;
+  	border-bottom: 6px solid #FFA600;
+  	background-color: #4A4A4A;
+  	color: white;
+  	padding-top: 5em;
+  	padding-bottom:2em;
   .footlinkcontainer{
-		  a	{
+		a {
 			color: white;
 		}
 		span {
@@ -203,13 +203,24 @@ footer {
 			margin-bottom: 2em;
 		}
 	}
-  p:first-child {
-	text-align: center;	
-	padding-left: 2em;
-	padding-right: 2em;
+ 	.statement {
+		text-align: center;	
+		margin-bottom: 2em;
 	}
 	.linksandlogo{
 		margin-top: 2em;
+	}
+	.locinfo{
+		text-align: right;	
+	}
+	.footlinks{
+			text-align: right;
+		a {
+			margin-right: 2em;
+		}
+		a:first-child{
+			margin-left: 0;	
+		}	
 	}
 }
 .otherpages {
