--- a/src/app/main/main.html
+++ b/src/app/main/main.html
@@ -210,7 +210,7 @@
 				</a>
 		</div>
 		<div class='footlinkcontainer col-md-7'>
-				<div class='col-md-10 col-xs-8 locinfo'>
+				<div class='col-md-10 col-xs-8 locinfo row'>
 						<span>
 						Cocoa Beach Community Church, 126 South Atlantic Avenue, Cocoa Beach, FL  32931 
 						</span>
@@ -218,11 +218,14 @@
 						(321) 783-3961
 						</span>
 		</div>
-		<div class='col-md-10 footlinks'>
+		<div class='row'>
+		<div class='col-md-10 col-sm-8 footlinks'>
 				<a ui-sref='home'>Home</a>
 				<a ui-sref='learn'>Learn More</a>
 				<a ui-sref='ministries'>Ministries</a>
-				<a ui-sref='facilities'>Facilities</a>
+				<a class='hidden-xs' ui-sref='facilities'>Facilities</a>
+				<a class='hidden-xs' ui-sref='spiritual'>Spiritual Life</a>
 		</div><!--footlinkcontainer-->
+		</div>
 	</div><!--row-->
   </footer>
