--- a/src/app/ministries/ministries.html
+++ b/src/app/ministries/ministries.html
@@ -23,17 +23,17 @@
 				<p>Organist: Mr. David Wrable</p>
 				<h3>Education</h3>
 				<p>Coleman Todd: Associate for Church Growth, Social Justice and Education</p>
-				<h3>Adult Bible Discussion</h3>		
+				<h3 id='adultbible'>Adult Bible Discussion</h3>		
 				<h4>Sundays at 9:00am and Tuesdays at 2:00pm</h4>
 				<h5>Facilatator: Loren Bowling</h5>
 				<p>	
 				This class is based on the Standard Lesson Quarterly [NIV]. SLQ combines meaningful Bible study with culturally relevant examples and discussion questions.       
 				</p>	
-				<h3>Children and Youth Programs</h3>	
+				<h3 id='childrenand'>Children and Youth Programs</h3>	
 				<p>
 				NO CURRENT PLAN FOR HERE…..WE WILL HAVE STATIC INFO SOON AND EVENTUALLY IT WOULD BE NICE TO HAVE A LINK PULL CURRENT INFO FROM A BLOG HERE.
 				</p>
-				<h3>
+				<h3 id='centerfor'>
 				CENTER FOR SPIRITUAL ENRICHMENT
 				</h3>
 				<h4>
@@ -50,11 +50,11 @@
 				</p>
 				<p>------BLOG INSERTION-------</p>
 				<p>Contact Coleman Todd at <a href='mailto:coleman@cbcc-ucc.org'>coleman@cbcc-ucc.org</a></p>
-				<h3>Mission</h3>
+				<h3 id='mission'>Mission</h3>
 				<p>“Let us not love with words or speech but with actions and in truth.”
 				</p>
-				<h4>Local</h4>
-				<h5>HUNGER KNOWS NO SEASON . . . WE COLLECT FOOD EVERY WEEK!</h5>
+				<h4 id='local'>Local</h4>
+				<h5 id='hungerknows'>HUNGER KNOWS NO SEASON . . . WE COLLECT FOOD EVERY WEEK!</h5>
 				<p>
 				CBCC helps support many food ministries In Cocoa Beach and throughout the Space Coast.  We appreciate the food and other items brought in each Sunday and placed in our basket. Single serving items are used in ready to eat lunch bags available at the thrift store and at the church office.  Other foods items are given to local food pantries.  
 				</p>
@@ -62,30 +62,30 @@
 				</h5>
 				<p>
 				Bring some friends and come enjoy a late afternoon of Food, Fellowship and often there is live music too. This is a great outreach opportunity.  Invite friends or someone you may know who may be looking for a church home but may be hesitant to come on Sunday mornings.  Of course we hope each month more and more will just drop in.  Maybe it will be neighbors needing nourishment, or seekers seeking spirit, or friends finding fellowship. Want to Help? Food, Set-up / Clean-up:  Contact Coleman Todd at <a href='mailto:coleman@cbcc-ucc.org'>coleman@cbcc-ucc.org</a></p>
-				<h5>
+				<h5 id='cocoabeach'>
  				COCOA BEACH COMMUNITY MEAL
 				</h5>
 				<p>First &amp; Third Sundays of Each Month from 5:00 PM to 7:00 PM.</p>
 				<p>Food Pantry Open during the meal </p>
 				<p>Location: First United Methodist Church: 3300 N. Atlantic Ave.</p>
 				<p>Want to volunteer? Contact Coleman Todd at  <a href='mailto:coleman@cbcc-ucc.org'>coleman@cbcc-ucc.org</a></p>
-				<h3>
+				<h3 id='statenational'>
 				STATE, NATIONAL AND GLOBAL MISSION
 				</h3>	
-				<h4>
+				<h4 id='uccmission'>
 				UCC Mission opportunities: 
 				</h4>
-				<a href='http://www.uccfla.org/uccfla/Disaster_Ministry.html'>www.uccfla.org/uccfla/Disaster_Ministry.html</a>
-				<a href='http://www.ucc.org/disaster'>www.ucc.org/disaster</a>
-				<a href='http://www.ucc.org/justice'>www.ucc.org/justice</a>
-				<a href='http://www.globalministries.org/'>www.globalministries.org/</a>
-				<h4>Crop Walk</h4>
+				<a href='http://www.uccfla.org/uccfla/Disaster_Ministry.html'>www.uccfla.org/uccfla/Disaster_Ministry.html</a><br />
+				<a href='http://www.ucc.org/disaster'>www.ucc.org/disaster</a><br />
+				<a href='http://www.ucc.org/justice'>www.ucc.org/justice</a><br />
+				<a href='http://www.globalministries.org/'>www.globalministries.org/</a><br />
+				<h4 id='cropwalk'>Crop Walk</h4>
 				<p>
 				Communities Responding to Overcome Poverty.  CROP Walk is a fundraising activity that helps to feed hungry people in Central Brevard County as well as around the rest of the U.S. and world.  
 				25% of funds raised stay local, used for Central Brevard Sharing Center’s Community Kitchen Program. See Church World Service link below to find out more about Crop Walk.
 				</p>
 				<a href='http://hunger.cwsglobal.org'>hunger.cwsglobal.org</a>
-				<h3>
+				<h3 id='pastoralcare'>
 						PASTORAL CARE
 				</h3>
 				<h4>
@@ -97,15 +97,18 @@
 				<p>
 				Do you know someone in need? Do you need a Birthday or Anniversary added to The Courier or card list?  Was one missed?
 				</p>
-				<h1>Other things here…need to fill in. </h1>
-				<h3>PROVIDE A RIDE</h3>
+				<p>Other things here…need to fill in.,...... </p>
+				<h3 id='providea'>PROVIDE A RIDE</h3>
 				<p>
 				Some church members and friends need rides to church on Sundays, or to meetings and activities our church offers during the week. 
 				</p>
 				<p>
 				If you need a ride or want to provide a ride please contact church office. 321-783-3961
 				</p>
-				<h1>---where do you want the below to go---</h1>	
+
+
+
+				<h3>---whats happening with this stuff---</h3>	
 				<p>All ages gather for worship at 10:00 AM in the church sanctuary. Our worship is primarily traditional worship with our church choir offering an inspiring anthem almost every week. We have a talented rotation of soloists and ensemble teams that encompass other musical genres creating a diverse musical experience on Sundays.
 				</p>
 				<h4>((maybe a choir heading/section?))</h4>
@@ -153,10 +156,17 @@
 			</section><!--lefttext-->
 			<section class='rightlinks col-md-2 col-md-offset-1 hidden-xs'>
 					<h3>MINISTRIES</h3>
-					<a ng-click="scrollTo('underoaks')">Under the Oaks</a>
-					<a ng-click="scrollTo('underoaks')">Under the Oaks</a>
-					<a ng-click="scrollTo('underoaks')">Under the Oaks</a>
-					<a ng-click="scrollTo('underoaks')">Under the Oaks</a>
+					<a ng-click="scrollTo('adultbible')">Adult Bible Discussion</a>
+					<a ng-click="scrollTo('childrenand')">Children and Youth Programs</a>
+					<a ng-click="scrollTo('centerfor')">Center For Spiritual Enrichment</a>
+					<a ng-click="scrollTo('mission')">Missions</a>
+					<a ng-click="scrollTo('local')">Local Missions</a>
+					<a ng-click="scrollTo('hungerknows')">Food Collection</a>
+					<a ng-click="scrollTo('underoaks')">2nd Saturday Suppers</a>
+					<a ng-click="scrollTo('cocoabeach')">Cocoa Beach Community Meal</a>
+					<a ng-click="scrollTo('statenational')">State, National and Global Missions</a>
+					<a ng-click="scrollTo('pastoralcare')">Pastoral Care</a>
+					<a ng-click="scrollTo('providea')">Provide a Ride</a>
 			</section><!--rightlinks-->
 		</div>
   </section>
