--- a/src/app/index.scss
+++ b/src/app/index.scss
@@ -242,15 +242,19 @@ footer {
 		}
 		.lefttext {
 			h2{
+				font-size:3em;
 				margin-top:1em;
 			}
 			h3{
+				font-size:2.5em;
 				margin-top: 3em;	
 			}
 			h4{
+				font-size:1.5em;
 				margin-top:1em;	
 			}
 			h5 {
+				font-size:1.25em;
 				margin-top:1em;
 			}
 			@media(max-width: 500px){
