added plan page updates, changed font awesome icons on main page

--- a/src/app/main/main.html
+++ b/src/app/main/main.html
@@ -152,7 +152,7 @@
           <a ui-sref="wfellowship" class="linktile">
             <div class="row">
               <div class="iconcontainer">
-                <i class="fa fa-child fa-4x"></i>
+                <i class="fa fa-female fa-4x"></i>
               </div>
               <div class="linktiletext">
 					  <p class="linkname">Womens Fellowship</p>
@@ -170,7 +170,7 @@
           <a ui-sref="photos" class="linktile">
             <div class="row">
               <div class="iconcontainer">
-                <i class="fa fa-shopping-cart fa-4x"></i>
+                <i class="fa fa-camera fa-4x"></i>
               </div>
               <div class="linktiletext">
                 <p class="linkname">Photo Gallery</p>
