--- a/src/app/plan/plan.html
+++ b/src/app/plan/plan.html
@@ -15,20 +15,55 @@
 		</div>
 		<div class='row'>
 			<section class='lefttext col-md-6 col-md-offset-1'>
-					<h2>PLAN</h2>
-					<p>CBCC is located in the heart of downtown Cocoa Beach. Just one block south of Minuteman Causeway on the corner of S. 1st Street. You can park in the lot directly behind church or in lots on the north and south of the church on Atlantic Ave.  
+					<h2>PLAN YOUR VISIT</h2>
+					<h3 id='location'>Location</h3>
+					<p>CBCC is located in the heart of downtown Cocoa Beach. Just one block south of Minuteman Causeway on the corner of S. 1st Street. You can park in the lot directly behind church or in lots on the north and south of the church on Atlantic Ave.  </p>
+					<iframe id='map' src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3154.599966144866!2d-80.60885749446474!3d28.316500318371126!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x88de1d17c7cf81b7%3A0x8978412482bdf038!2sCocoa+Beach+Community+Church!5e0!3m2!1sen!2sus!4v1441467651171" width="450" height="350" frameborder="0" style="border:0" allowfullscreen></iframe>
+					<h3 id='worship'>Worship</h3>
+					<h4>Sundays @ 10:00AM</h4>
+					<h5><a href='#'>Minister: Rev. Dr. Bill Tyson</a></h5>
+					<h5><a href='#'>Choir Director: Janet Johns</a></h5>
+					<h5><a href='#'>Organist: David Wrable</a></h5>
+					<h5><a href='#'>Education: Coleman Todd</a></h5>
+					<p>All ages gather for worship at 10:00 AM in the church sanctuary. Our worship is primarily traditional worship with our church choir offering an inspiring anthem almost every week. We have a talented rotation of <a href='#'>soloists</a> and <a href='#'>ensemble</a> teams that encompass other musical genres creating a diverse musical experience on Sundays.
 					</p>
-					<p>What to expect on Sunday Mornings:</p>
-					<h4>((discussing pictures/content for here))</h4>
+					<p>The first Sunday of each month is Holy Communion.</p>
+					<p>All are invited to the table</p>
+					<h4><a href='#'>Adult Bible Discussions: 9:00 AM</a></h4>
+					<h4><a href='#'>Sunday Children and Youth Program</a></h4>
+					<h3 id='afterworship'>After Worship is Fellowship</h3>
+					<h4>Meet &amp; Greet, friends old and new!</h4>
+					<p>Every week after worship plan to visit our fellowship time and get to know the friendly folk at CBCC.
+					</p>
+					<p>Potluck Lunch! The first Sunday of every month we enjoy a terrific potluck lunch. Don’t worry if you didn’t bring a dish to share because there is always plenty to go around!
+					</p>
+					<p>
+					Fellowship is more than coffee! It is an important part of the gathered church life!
+					</p>
+					<h3 id='sundayservants'>Sunday Servants</h3>
+					<p>Each week it takes many hands to insure that our worship and educational experience is the best it can be. 
+					</p>
+					<h4>We welcome those who wish to serve on Sundays! 
+					</h4>
+					<p>SUNDAY SCHOOL LEADERSHIP TEAM</p>
+					<p>USHERS AND GREETERS</p>
+					<p>AUDIO/VISUAL</p>
+					<p>FELLOWSHIP HOSTS</p>
+					<p><a href='#'>Want to help? Click here!</a></p>
+
+
+
+
+
 
 			</section><!--lefttext-->
 			<section class='rightlinks col-md-2 col-md-offset-1'>
 					<h3>PLAN</h3>
-					<p>Placeholder</p>
-					<p>Placeholder</p>
-					<p>Placeholder</p>
-					<p>Placeholder</p>
-					<p>Placeholder</p>
+					<a ng-click="scrollTo('location')">Location</a>
+					<a ng-click="scrollTo('map')">Map</a>
+					<a ng-click="scrollTo('worship')">Worship Time</a>
+					<a ng-click="scrollTo('afterworship')">After Worship</a>
+					<a ng-click="scrollTo('sundayservants')">Sunday Servants</a>
 			</section><!--rightlinks-->
 		</div>
   </section>
