--- a/src/app/index.scss
+++ b/src/app/index.scss
@@ -241,6 +241,10 @@ footer {
 			border-bottom: 10px solid #F17830;
 		}
 		.lefttext {
+			#map{
+				margin-top:3em;
+				margin-bottom:-5em;
+			}
 			h2{
 				font-size:3em;
 				margin-top:1em;
